--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <iframe
-    src="http://app.iptvplayer.stream/?url=http://ugeen.live:8080/Ugeen_VIPh6eHf0/hTyJZw/46"
+    src="http://app.iptvplayer.stream/"
     allowfullscreen
   ></iframe>
 </body>
