--- a/index.html
+++ b/index.html
@@ -1,33 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kicekoff Player</title>
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      width: 100%;
-      background-color: black;
-      overflow: hidden;
-    }
-
-    iframe {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      border: none;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Video Embed</title>
+<style>
+  body, html {
+    margin: 0;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #000;
+  }
+  #video-container {
+    position: relative;
+    width: 80%;
+    height: 60%;
+  }
+  iframe {
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
+  #controls {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    display: flex;
+    gap: 10px;
+  }
+  button {
+    padding: 8px 12px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+</style>
 </head>
 <body>
-  <iframe
-    src="http://app.iptvplayer.stream/"
-    allowfullscreen
-  ></iframe>
+
+<div id="video-container">
+  <iframe id="video-frame" src="https://dlhd.dad/stream/stream-91.php" allowfullscreen muted></iframe>
+  <div id="controls">
+    <button id="fullscreen-btn">F: Fullscreen</button>
+    <button id="unmute-btn">M: Unmute</button>
+  </div>
+</div>
+
+<script>
+const iframe = document.getElementById('video-frame');
+const fullscreenBtn = document.getElementById('fullscreen-btn');
+const unmuteBtn = document.getElementById('unmute-btn');
+
+// Fullscreen functionality
+fullscreenBtn.addEventListener('click', () => {
+  if (iframe.requestFullscreen) {
+    iframe.requestFullscreen();
+  } else if (iframe.webkitRequestFullscreen) { /* Safari */
+    iframe.webkitRequestFullscreen();
+  } else if (iframe.msRequestFullscreen) { /* IE11 */
+    iframe.msRequestFullscreen();
+  }
+});
+
+// Unmute functionality (requires the iframe content to allow it)
+unmuteBtn.addEventListener('click', () => {
+  // Send a message to the iframe if it has a video element that supports postMessage
+  iframe.contentWindow.postMessage({ action: 'unmute' }, '*');
+});
+
+// Optional: keyboard shortcuts
+document.addEventListener('keydown', (e) => {
+  if (e.key.toLowerCase() === 'f') {
+    fullscreenBtn.click();
+  }
+  if (e.key.toLowerCase() === 'm') {
+    unmuteBtn.click();
+  }
+});
+</script>
+
 </body>
 </html>
