--- a/index.html
+++ b/index.html
@@ -1,47 +1,30 @@
-<?php
-// stream-91.php
-?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Stream 91</title>
-<style>
-  html, body { margin:0; padding:0; height:100%; background:#000; }
-  #video-container { width:100%; height:100%; }
-  video { width:100%; height:100%; background:#000; }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Fullscreen Stream</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
+      background-color: black;
+    }
+    iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+  </style>
 </head>
 <body>
-<iframe 
-  src="https://dlhd.dad/stream/stream-91.php?fullscreen=true&mute=false" 
-  width="100%" height="100%" style="border:0;" allowfullscreen>
-</iframe>
-
-
-<script>
-// Get URL parameters
-const params = new URLSearchParams(window.location.search);
-const fullscreen = params.get('fullscreen') === 'true';
-const mute = params.get('mute') === 'false';
-
-// Get video element
-const video = document.getElementById('stream-video');
-video.muted = !mute;
-
-// Try to play (may require user interaction in some browsers)
-video.play().catch(() => console.log('Autoplay blocked'));
-
-// Try fullscreen if requested
-if (fullscreen) {
-  setTimeout(() => {
-    if (video.requestFullscreen) video.requestFullscreen();
-    else if (video.webkitRequestFullscreen) video.webkitRequestFullscreen();
-    else if (video.msRequestFullscreen) video.msRequestFullscreen();
-  }, 500);
-}
-</script>
-
+  <iframe 
+    src="https://www.hlsplayer.net/embed?type=m3u8&src=https://1805c4012b4cda.sokii.shop/kooora/d4f9ab7dsd5sabeins1111_hd?ts=1760784997&nonce=2NdJ1tl1&token=1593141895"
+    allowfullscreen
+    webkitallowfullscreen
+    mozallowfullscreen>
+  </iframe>
 </body>
 </html>
