--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fullscreen Stream</title>
+  <title>Fullscreen Player</title>
   <style>
     html, body {
       margin: 0;
@@ -21,8 +21,10 @@
 </head>
 <body>
   <iframe 
-    src="https://www.hlsplayer.net/embed?type=m3u8&src=https://1805c4012b4cda.sokii.shop/kooora/d4f9ab7dsd5sabeins1111_hd?ts=1760784997&nonce=2NdJ1tl1&token=1593141895"
+    src="https://pww1a3caoxythv5bbtkvaipjgphu1vpvbhon4kjuh6vmqvrrznohu2s9jqcfmwy.sokii.shop/player.php?match=match1&key=c0ae1ada6eebd7e6cc5b88b1d2b71547"
+    frameborder="0"
     allowfullscreen
+    allow="autoplay; fullscreen"
     webkitallowfullscreen
     mozallowfullscreen>
   </iframe>
