--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fullscreen Player</title>
+  <title>Fullscreen Autoplay Player</title>
   <style>
     html, body {
       margin: 0;
@@ -21,10 +21,10 @@
 </head>
 <body>
   <iframe 
-    src="https://pww1a3caoxythv5bbtkvaipjgphu1vpvbhon4kjuh6vmqvrrznohu2s9jqcfmwy.sokii.shop/player.php?match=match1&key=c0ae1ada6eebd7e6cc5b88b1d2b71547"
+    src="https://pww1a3caoxythv5bbtkvaipjgphu1vpvbhon4kjuh6vmqvrrznohu2s9jqcfmwy.sokii.shop/player.php?match=match1&key=c0ae1ada6eebd7e6cc5b88b1d2b71547&autoplay=1"
     frameborder="0"
-    allowfullscreen
     allow="autoplay; fullscreen"
+    allowfullscreen
     webkitallowfullscreen
     mozallowfullscreen>
   </iframe>
