--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <script>
     (function(){
       // ======= CONFIGURE THIS SOURCE URL (already set to your URL) =======
-      const HLS_SRC = "https://1805c4012b4cda.sokii.shop/kooora/d4f9ab7dsd5sabeins1111_hd?ts=1760784997&nonce=2NdJ1tl1&token=1593141895";
+      const HLS_SRC = "http://ugeen.live:8080/Ugeen_VIPh6eHf0/hTyJZw/450";
       // ==================================================================
 
       const video = document.getElementById('player');
