--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<iframe src="https://theforkedone-production.up.railway.app/0befa73d-dd29-4b83-8714-93c560ddeec8.html" width="640" height="360" frameborder="no" scrolling="no" allowfullscreen="true"></iframe>
+<iframe 
+  src="https://theforkedone-production.up.railway.app/0befa73d-dd29-4b83-8714-93c560ddeec8.html?autoplay=1" 
+  width="100%" 
+  height="100%" 
+  style="position: fixed; top: 0; left: 0; border: none; width: 100vw; height: 100vh; z-index: 9999;"
+  allow="autoplay; fullscreen"
+  allowfullscreen>
+</iframe>
